load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

DEPS = [
    requirement("flask"),
]

SCRS = glob([
   "functions/**/*.py",
])

py_library(
    name = "lib",
    srcs = [
        "functions/utils.py",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main",
    srcs = SCRS,
    deps = DEPS,
)

TEST_DEPS = [
    ":main",
    requirement("pytest"),
]

TEST_SRCS = glob([
    "tests/**/*.py",
])

py_test(
    name = "test",
    srcs = TEST_SRCS,
    deps = TEST_DEPS,
)
