load("@npm//webpack-dev-server:index.bzl", server = "webpack_dev_server")

server(
    name = "server",
    args = [
        "--hot",
        "--watch-poll",
        "--config webpack.config.js"
    ],
    data = glob(["src/**/*.tsx"]) + [
        "src/App.css",
        "public/index.html",
        "public/favicon.ico",
        "tsconfig.json",
        "webpack.config.js"
    ],
)