load("@npm//webpack-dev-server:index.bzl", server = "webpack_dev_server")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")

filegroup(
    name = "srcs",
    srcs = glob(
        include = [
            "index.js",
            "src/**/*",
            "public/**/*",
            "tsconfig.json",
            "webpack.config.js"
        ],
        exclude = [
            "node_modules/**/*",
        ],
    ),
)

server(
    name = "server",
    args = [
        "--hot",
        "--watch-poll",
        "--config client/webpack.config.js"
    ],
    data = [":srcs",],
#    glob(["src/**/*.tsx"]) + glob(["src/**/*.ts"]) + glob(["src/**/*.json"]) + [
#        "src/App.css",
#        "public/index.html",
#        "public/favicon.ico",
#        "tsconfig.json",
#        "webpack.config.js"
#    ],
)

webpack(
    name = "webpack_build",
    args = [
        "--mode=production",
        "--config client/webpack.config.js",
        "-o",
        "$(@D)/index.js"
    ],
    data = [
        ":srcs",
        "@npm//:node_modules",
    ],
    output_dir = True,
)