[tool.poetry]
name = "functions"
version = "0.1.0"
description = ""
authors = ["Harry Keightley <harrykeightley@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-storage = "^2.5.0"
google-cloud-pubsub = "^2.13.6"
google-auth = "^2.11.0"
firebase-admin = "^5.3.0"
pympi-ling = "^1.70.2"
SoundFile = "^0.10.3"
numpy = "^1.23.3"
functions-framework = "3.0.0"
Flask = "2.0.2"
loguru = "^0.6.0"
cloudevents = "^1.6.1"
pyhumps = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pyright = "^1.1.271"
pytest-mock = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[pytest]
mock_traceback_monkeypatch = false
